--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 		<meta name="viewport" content="initial-scale=1, user-scalable=no, maximum-scale=1, width=device-width, height=device-height">
       
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
-		
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>
+    	<!--script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+   integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+   crossorigin=""></script-->
+   		<script type="text/javascript" src="js/bundle.min.js"></script>
+		<script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+		<!--link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/-->
 		<script src="js/widgets/widget.js"></script>
 		<script src="js/widget.js"></script>
 		<script src="js/ui.js"></script>
@@ -20,6 +28,6 @@
 		
 	</head>
 	<body>
-		
+		 <div id="map" style="width: 100%; height: 250px;"></div>
 	</body>
 </html>
