--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<meta name="viewport" content="initial-scale=1, user-scalable=no, maximum-scale=1, width=device-width, height=device-height">
       
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
-    
+    		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>
    		<script type="text/javascript" src="js/bundle.min.js"></script>
 		<script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
 		<script src="js/widgets/widget.js"></script>
