Added missing sdk

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
+		<link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/-->
+		<script src="js/widgets/widget.js"></script>
    		<script type="text/javascript" src="js/bundle.min.js"></script>
 		<script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
 		<script src="js/widgets/widget.js"></script>
